tests/valid/declaracaoString.ts
let a: string = "isto é uma string";
