tests/invalid/testeOperacoesinvalidas.ts
let ls: number = 10 + "a";

let vv: number = "5" + "2";
